# dynacase-cas

./: Makefile.in  README.md  RELEASE  configure.in  info.xml.in
Class/: Class.casAuthenticator.php  Makefile
programs/: phpcas_install
